--- a/src/renderer/templates/list.vue.ejs
+++ b/src/renderer/templates/list.vue.ejs
@@ -126,11 +126,11 @@ export default {
       <%= field.key %>Choices: [
         <%_ field.choices.forEach(function(choice){ _%>
         {
-          value: <%= field.type === 'number' ? choice.value : `"${choice.value}"` %>,
+          value: <%- field.type === 'number' ? choice.value : `"${choice.value}"` %>,
           label: "<%= choice.label %>"
         },
         <%_ }) _%>
-      ]
+      ],
       <%_ } _%>
       <%_ }) _%>
     }
