--- a/src/renderer/templates/add.vue.ejs
+++ b/src/renderer/templates/add.vue.ejs
@@ -10,7 +10,7 @@
           </el-form-item>
           <%_ } else if (field.choices && field.choices.length > 0) { _%>
           <el-form-item label="<%= field.name %>">
-            <el-select v-model="form.region" placeholder="请选择<%= field.name %>">
+            <el-select v-model="form.<%= field.key %>" placeholder="请选择<%= field.name %>">
               <%_ field.choices.forEach(function(choice) { _%>
               <el-option label="<%= choice.label %>" <% if (field.type === 'number') { %> :<% } %>value="<%= choice.value %>"></el-option>
               <%_ }) _%>
