--- a/static/templates/edit.vue.ejs
+++ b/static/templates/edit.vue.ejs
@@ -1,69 +1,93 @@
 <template>
-  <el-card>
-    <el-form :model="form" label-width="80px">
-      <%_ fields.forEach(function(field) { _%>
-        <%_ if (field.write) { _%>
-          <%_ if (field.type === 'datetime') { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-date-picker v-model="form.<%= field.key %>" type="datetime" placeholder="选择日期时间">
-            </el-date-picker>
-          </el-form-item>
-          <%_ } else if (field.choices && (field.choices.length > 0 || field._select_type === 'api')) { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-select v-model="form.<%= field.key %>" placeholder="请选择<%= field.name %>">
-              <%_ field.choices.forEach(function(choice) { _%>
-              <el-option label="<%= choice.label %>" <% if (field.type === 'number') { %> :<% } %>value="<%= choice.value %>"></el-option>
-              <%_ }) _%>
-            </el-select>
-          </el-form-item>
-          <%_ } else if (field.type === 'number') { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-input-number v-model="form.<%= field.key %>" ></el-input-number>
-          </el-form-item>
-          <%_ } else if (field.type === 'boolean') { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-switch v-model="form.<%= field.key %>"></el-switch>
-          </el-form-item>
-          <%_ } else if (field.type === 'image') { _%>
-          <el-form-item label="<%= field.name %>">
+  <d2-container>
+    <el-card>
+      <el-form :model="form" label-width="80px">
+        <%_ fields.forEach(function(field) { _%>
+          <%_ if (field.write) { _%>
+            <%_ if (field.type === 'datetime') { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-date-picker v-model="form.<%= field.key %>" type="datetime" placeholder="选择日期时间">
+              </el-date-picker>
+            </el-form-item>
+            <%_ } else if (field.choices && (field.choices.length >= 0 && field._select_type === 'fixed')) { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-select v-model="form.<%= field.key %>" placeholder="请选择<%= field.name %>">
+                <el-option
+                  v-for="item in <%= field.key %>Choices"
+                  :key="item.value"
+                  :label="item.label"
+                  :value="item.value">
+                </el-option>
+              </el-select>
+            </el-form-item>
+            <%_ } else if (field.choices && (field.choices.length >= 0 && field._select_type === 'api')) { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-select v-model="form.<%= field.key %>" placeholder="请选择<%= field.name %>">
+                <el-option
+                  v-for="item in <%= field.key %>Choices"
+                  :key="item.id"
+                  :label="item.<%= field._label %>"
+                  :value="item.<%= field._value %>">
+                </el-option>
+              </el-select>
+            </el-form-item>
+            <%_ } else if (field.type === 'number') { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-input-number v-model="form.<%= field.key %>" ></el-input-number>
+            </el-form-item>
+            <%_ } else if (field.type === 'boolean') { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-switch v-model="form.<%= field.key %>"></el-switch>
+            </el-form-item>
+            <%_ } else if (field.type === 'image') { _%>
+            <el-form-item label="<%= field.name %>">
+                <el-upload
+                  class="avatar-uploader"
+                  action="/api/upload/"
+                  :show-file-list="false"
+                  :on-success="<%= field.key %>Upload">
+                  <img v-if="form.<%= field.key %>" :src="form.<%= field.key %>" class="avatar">
+                  <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+                </el-upload>
+            </el-form-item>
+            <%_ } else if (field.type === 'file') { _%>
+            <el-form-item label="<%= field.name %>">
               <el-upload
-                class="avatar-uploader"
-                action="/api/upload/"
-                :show-file-list="false"
-                :on-success="<%= field.key %>Upload">
-                <img v-if="form.<%= field.key %>" :src="form.<%= field.key %>" class="avatar">
-                <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+                class="upload-demo"
+                drag
+                action="//up.qbox.me/"
+                :limit="1"
+                :data="<%= field.key %>Data"
+                :file-list="<%= field.key %>FileList"
+                :before-upload="<%= field.key %>HandleBeforeUpload"
+                :on-exceed="<%= field.key %>Exceed"
+                :on-success="<%= field.key %>UploadFile">
+                <i class="el-icon-upload"></i>
+                <div class="el-upload__text">将文件拖到此处，或<em>点击上传</em></div>
               </el-upload>
-          </el-form-item>
-          <%_ } else if (field.type === 'file') { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-upload
-              class="upload-demo"
-              drag
-              action="//up.qbox.me/"
-              :limit="1"
-              :data="<%= field.key %>Data"
-              :file-list="<%= field.key %>FileList"
-              :before-upload="<%= field.key %>HandleBeforeUpload"
-              :on-exceed="<%= field.key %>Exceed"
-              :on-success="<%= field.key %>UploadFile">
-              <i class="el-icon-upload"></i>
-              <div class="el-upload__text">将文件拖到此处，或<em>点击上传</em></div>
-            </el-upload>
-          </el-form-item>
-          <%_ } else { _%>
-          <el-form-item label="<%= field.name %>">
-            <el-input v-model="form.<%= field.key %>"></el-input>
-          </el-form-item>
+            </el-form-item>
+            <%_ } else if (field.type === 'content') { _%>
+              <el-form-item label="<%= field.name %>">
+                <template>
+                  <quill-editor :content="form.<%= field.key %>"
+                    @change="<%= field.key %>EditorChange($event)">
+                  </quill-editor>
+                </template>
+            </el-form-item>
+            <%_ } else { _%>
+            <el-form-item label="<%= field.name %>">
+              <el-input v-model="form.<%= field.key %>"></el-input>
+            </el-form-item>
+            <%_ } _%>
           <%_ } _%>
-        <%_ } _%>
-      <%_ }) _%>
-      <el-form-item>
-        <el-button type="primary" @click="onSubmit">保存</el-button>
-        <el-button>取消</el-button>
-      </el-form-item>
-    </el-form>
-  </el-card>
+        <%_ }) _%>
+        <el-form-item>
+          <el-button type="primary" @click="onSubmit">保存</el-button>
+          <el-button>取消</el-button>
+        </el-form-item>
+      </el-form>
+    </el-card>
+  </d2-container>
 </template>
 <script>
 export default {
@@ -74,7 +98,11 @@ export default {
       form: {
         <%_ fields.forEach(function(field) { _%>
         <%_ if (field.write) { _%>
+        <%_ if (field.type === 'boolean') { _%>
+        <%= field.key %>: true,
+        <%_ } else { _%>
         <%= field.key %>: '',
+        <%_ } _%>
         <%_ } _%>
         <%_ }) _%>
       },
@@ -152,6 +180,10 @@ export default {
     <%= field.key %>Upload (res, file) {
       console.log('handleUploadSuccess', res, file)
       this.form.<%= field.key %> = res.results.url
+    },
+    <%_ } else if (field.type === 'content') { _%> 
+    <%= field.key %>EditorChange ({ quill, html, text }) {
+      this.form.<%= field.key %> = html
     },
     <%_ } else if (field.type === 'file') { _%> 
     <%= field.key %>UploadFile (response, file, fileList) {
