--- a/static/templates/add.vue.ejs
+++ b/static/templates/add.vue.ejs
@@ -1,5 +1,5 @@
-<template>
-	<d2-container>
+<template>11
+  <d2-container>
     <el-card>
       <el-form :model="form" label-width="80px">
         <%_ fields.forEach(function(field) { _%>
